[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Lobby.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
WindowDialog/fonts/title_font = SubResource( 5 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -142.0
margin_right = 112.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -135.0
margin_right = 83.0
margin_bottom = -105.0
custom_fonts/font = SubResource( 1 )
text = "Connected Players:"
align = 1
valign = 1

[node name="ItemList" type="ItemList" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -94.0
margin_right = 81.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )

[node name="Start" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 100.0
margin_right = 50.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -104.0
margin_right = 182.0
margin_bottom = 104.0

[node name="NameLabel" type="Label" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -96.0
margin_right = -98.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 1 )
text = "Name:"
valign = 1

[node name="NameField" type="LineEdit" parent="Connect"]
margin_left = 20.0
margin_top = 45.0
margin_right = 240.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "Player"

[node name="IPLabel" type="Label" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -22.0
margin_right = -98.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "IP:"
valign = 1

[node name="IPField" type="LineEdit" parent="Connect"]
margin_left = 20.0
margin_top = 119.0
margin_right = 240.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 4 )
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -59.0
margin_right = 170.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 2 )
text = "Host"

[node name="Join" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = 15.0
margin_right = 170.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
modulate = Color( 1, 0.341176, 0.341176, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = 56.0
margin_right = 169.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ErrorPopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -65.0
margin_right = 141.0
margin_bottom = 65.0
theme = SubResource( 6 )
window_title = "Error"
dialog_autowrap = true

[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
